Using new multiverse api